--- a/frontend/src/app/weather/weather.component.css
+++ b/frontend/src/app/weather/weather.component.css
@@ -1,7 +1,18 @@
-/* Structure */
-
 mat-toolbar {
-    width: 100%;
-    height: 90px;
-    font-size: 24px;
+  width: 100%;
+  height: 90px;
+  font-size: 24px;
 }
+
+button {
+  margin: 8px;
+}
+
+.container-fluid {
+  text-align: center;
+}
+
+mat-spinner {
+  background-color: white;
+}
+/*# sourceMappingURL=weather.component.css.map */
