user geo timezone

--- a/frontend/src/app/weather/weather.component.html
+++ b/frontend/src/app/weather/weather.component.html
@@ -26,7 +26,8 @@
             <div [@fadeTrigger]="getFadeState()">
                 <div class="row">
                     <div class="col-12">
-                        <app-weather-data [weatherData]="weatherData" [timeData]="timeData"></app-weather-data>
+                        <app-weather-data [weatherData]="weatherData" [timeData]="timeData"
+                            [userGeoTimezone]="userGeoTimezone"></app-weather-data>
                     </div>
                 </div>
                 <br>
