UI touches, timezone fixes

--- a/frontend/src/app/weather/weather-table/weather-table/weather-table.component.html
+++ b/frontend/src/app/weather/weather-table/weather-table/weather-table.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Guelph">
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. London">
 </mat-form-field>
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
