Bug fixes with geo location on mobile, refactoring

--- a/frontend/src/app/weather/info-dialog/info-dialog.component.html
+++ b/frontend/src/app/weather/info-dialog/info-dialog.component.html
@@ -1,4 +1,5 @@
 <ul>
+    <li>Please enable geolocation if you are not within UTC+01:00</li>
     <li>Enter a location name or click on the map to fetch information about any location</li>
     <li>Theme changes based on locations current time</li>
     <li>Below is a table showing all the locations users have entered</li>
